--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -16,11 +16,12 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
   height: 100%;
   overflow-y: auto;
   width: v.$sidebar-width;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/assets/img/sidebar.jpeg');
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/assets/img/sidebar.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   border-right: 1px solid var(--sidebar-border-color);
+  font-family: 'IBMPlexSansKR-Regular', sans-serif;
 
   /* Hide scrollbar for IE, Edge and Firefox */
   -ms-overflow-style: none; /* IE and Edge */
@@ -48,7 +49,7 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
 
   %sidebar-link-hover {
     &:hover {
-      color: var(--sidebar-active-color);
+      color: #FFFFFF;
     }
   }
 
@@ -109,12 +110,12 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
     margin-top: 1.25rem;
     margin-bottom: 0.5rem;
     width: fit-content;
-    color: var(--site-title-color);
+    color: #FFFFFF;
   }
 
   .site-subtitle {
     font-size: 95%;
-    color: var(--site-subtitle-color);
+    color: #EAEAEA;
     margin-top: 0.25rem;
     word-spacing: 1px;
     -webkit-user-select: none;
@@ -137,6 +138,7 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
       }
 
       a.nav-link {
+        color: #FFFFFF; /* Set default color for all nav links */
         @include mx.pt-pb(0.6rem);
 
         display: flex;
@@ -162,7 +164,7 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
 
       &.active {
         .nav-link {
-          color: var(--sidebar-active-color);
+          color: #FFFFFF;
           background-color: var(--sidebar-hover-bg);
 
           span {
@@ -194,8 +196,8 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
       height: $btn-size;
       margin-bottom: $btn-mb; // multi line gap
       border-radius: 50%;
-      color: var(--sidebar-btn-color);
-      background-color: var(--sidebar-btn-bg);
+      color: #FFFFFF;
+      background-color: transparent;
       text-align: center;
       display: flex;
       align-items: center;
