feat: add custom font

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -21,7 +21,7 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
   background-position: center;
   background-repeat: no-repeat;
   border-right: 1px solid var(--sidebar-border-color);
-  font-family: 'IBMPlexSansKR-Regular', sans-serif;
+  font-family: 'GowunDodum-Regular', sans-serif;
 
   /* Hide scrollbar for IE, Edge and Firefox */
   -ms-overflow-style: none; /* IE and Edge */
@@ -114,6 +114,7 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
   }
 
   .site-subtitle {
+    font-family: 'IBMPlexSansKR-Regular', serif !important;
     font-size: 95%;
     color: #EAEAEA;
     margin-top: 0.25rem;
