--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -17,6 +17,22 @@
     font-style: normal;
 }
 
+/* GabiaMaeumgyeol 폰트 임포트 */
+@font-face {
+    font-family: 'GabiaMaeumgyeol';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2205@1.0/GabiaMaeumgyeol.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* GowunDodum-Regular 인터페이스 폰트 임포트 */
+@font-face {
+    font-family: 'GowunDodum-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/GowunDodum-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 @for $i from 1 through 5 {
   h#{$i} {
     @extend %heading;
@@ -47,6 +63,49 @@
       font-size: 1.05rem;
     }
   }
+}
+
+/* 헤딩별 색상 및 폰트 적용 */
+h1 {
+  font-family: 'GabiaMaeumgyeol', sans-serif !important;
+  color: #2A3A2B !important;
+  font-weight: bold !important;
+  font-size: 2.2rem !important; /* 기본보다 약간 크게 */
+}
+
+h2 {
+  font-family: 'GabiaMaeumgyeol', sans-serif !important;
+  color: #ff8c1a !important;
+  font-weight: bold !important;
+  font-size: 1.9rem !important; /* 기본보다 약간 크게 */
+}
+
+h3 {
+  font-family: 'GabiaMaeumgyeol', sans-serif !important;
+  color: #3F6A3D !important;
+  font-weight: bold !important;
+  font-size: 1.6rem !important; /* 기본보다 약간 크게 */
+}
+
+h4 {
+  font-family: 'GabiaMaeumgyeol', sans-serif !important;
+  color: #2f3f8b !important;
+  font-weight: bold !important;
+  font-size: 1.35rem !important; /* 기본보다 약간 크게 */
+}
+
+h5 {
+  font-family: 'GabiaMaeumgyeol', sans-serif !important;
+  color: #8b2f5a !important;
+  font-weight: bold !important;
+  font-size: 1.2rem !important; /* 기본보다 약간 크게 */
+}
+
+h6 {
+  font-family: 'GabiaMaeumgyeol', sans-serif !important;
+  color: #cc5500 !important;
+  font-weight: bold !important;
+  font-size: 1.1rem !important; /* 기본보다 약간 크게 */
 }
 
 a {
@@ -239,6 +298,67 @@ main {
       line-height: inherit;
       letter-spacing: normal;
     }
+
+    /* 포스트 콘텐츠 내 헤딩 스타일 */
+    h1 {
+      font-family: 'GabiaMaeumgyeol', sans-serif !important;
+      color: #2A3A2B !important;
+      font-weight: bold !important;
+      font-size: 2.2rem !important;
+      background: none;
+      margin: 2.5rem 0 1.5rem;
+      padding: 0;
+    }
+
+    h2 {
+      font-family: 'GabiaMaeumgyeol', sans-serif !important;
+      color: #ff8c1a !important;
+      font-weight: bold !important;
+      font-size: 1.9rem !important;
+      background: none;
+      margin: 2.5rem 0 1.25rem;
+      padding: 0;
+    }
+
+    h3 {
+      font-family: 'GabiaMaeumgyeol', sans-serif !important;
+      color: #3F6A3D !important;
+      font-weight: bold !important;
+      font-size: 1.6rem !important;
+      background: none;
+      margin: 2rem 0 1rem;
+      padding: 0;
+    }
+
+    h4 {
+      font-family: 'GabiaMaeumgyeol', sans-serif !important;
+      color: #2f3f8b !important;
+      font-weight: bold !important;
+      font-size: 1.35rem !important;
+      background: none;
+      margin: 2rem 0 1rem;
+      padding: 0;
+    }
+
+    h5 {
+      font-family: 'GabiaMaeumgyeol', sans-serif !important;
+      color: #8b2f5a !important;
+      font-weight: bold !important;
+      font-size: 1.2rem !important;
+      background: none;
+      margin: 2rem 0 1rem;
+      padding: 0;
+    }
+
+    h6 {
+      font-family: 'GabiaMaeumgyeol', sans-serif !important;
+      color: #cc5500 !important;
+      font-weight: bold !important;
+      font-size: 1.1rem !important;
+      background: none;
+      margin: 2rem 0 1rem;
+      padding: 0;
+    }
   }
 
   @include bp.lte(bp.get(sm)) {
@@ -289,6 +409,27 @@ main {
     bottom: 0.25em;
     margin-left: 0.25em;
     border-bottom-style: none !important;
+  }
+}
+
+/* 우측 패널 인터페이스 폰트 설정 */
+#toc-wrapper,
+#panel-wrapper {
+  font-family: 'GowunDodum-Regular', sans-serif !important;
+  font-weight: 400;
+  
+  /* TOC 내부 헤딩은 인터페이스 폰트 사용 */
+  h1, h2, h3, h4, h5, h6,
+  .toc-link {
+    font-family: 'GowunDodum-Regular', sans-serif !important;
+    color: var(--text-color) !important;
+    font-weight: 400 !important;
+    font-size: inherit !important;
+  }
+  
+  /* TOC 링크 강조 시에만 볼드 */
+  .is-active-link {
+    font-weight: 600 !important;
   }
 }
 
