--- a/_sass/pages/_archives.scss
+++ b/_sass/pages/_archives.scss
@@ -1,6 +1,11 @@
 @use '../abstracts/breakpoints' as bp;
 @use '../abstracts/placeholders';
 
+/* Archives 페이지 인터페이스 폰트 적용 */
+#archives {
+  font-family: 'GowunDodum-Regular', sans-serif;
+}
+
 #archives {
   letter-spacing: 0.03rem;
 
@@ -107,7 +112,7 @@
 
     &.day {
       font-size: 85%;
-      font-family: Lato, sans-serif;
+      font-family: 'GowunDodum-Regular', sans-serif;
     }
   }
 
