--- a/_sass/pages/_tags.scss
+++ b/_sass/pages/_tags.scss
@@ -1,5 +1,11 @@
 @use '../abstracts/breakpoints' as bp;
 
+/* Tags 페이지 인터페이스 폰트 적용 */
+#tags,
+.tag {
+  font-family: 'GowunDodum-Regular', sans-serif;
+}
+
 .tag {
   border-radius: 0.7em;
   padding: 6px 8px 7px;
@@ -12,7 +18,7 @@
   span {
     margin-left: 0.6em;
     font-size: 0.7em;
-    font-family: Oswald, sans-serif;
+    font-family: 'GowunDodum-Regular', sans-serif;
   }
 }
 
