feat: change color

--- a/_sass/abstracts/_placeholders.scss
+++ b/_sass/abstracts/_placeholders.scss
@@ -11,6 +11,7 @@
 %anchor {
   .anchor {
     font-size: 80%;
+    color: #838B52 !important;
   }
 
   @media (hover: hover) {
@@ -18,6 +19,7 @@
       visibility: hidden;
       opacity: 0;
       transition: opacity 0.25s ease-in, visibility 0s ease-in 0.25s;
+      color: #838B52 !important;
     }
 
     &:hover {
@@ -25,6 +27,7 @@
         visibility: visible;
         opacity: 1;
         transition: opacity 0.25s ease-in, visibility 0s ease-in 0s;
+        color: #838B52 !important;
       }
     }
   }
@@ -42,8 +45,8 @@
 }
 
 %link-hover {
-  color: #d2603a !important;
-  border-bottom: 1px solid #d2603a;
+  color: #838B52 !important;
+  border-bottom: 1px solid #838B52;
   text-decoration: none;
 }
 
