--- a/_sass/themes/_dark.scss
+++ b/_sass/themes/_dark.scss
@@ -65,7 +65,7 @@
   --btn-paginator-hover-color: #2e2e2e;
 
   /* Posts */
-  --toc-highlight: #468FCC;
+  --toc-highlight: #838B52;
   --toc-popup-border-color: #373737;
   --tag-hover: rgb(43, 56, 62);
   --tb-odd-bg: #252526; /* odd rows of the posts' table */
