--- a/_includes/comments/giscus.html
+++ b/_includes/comments/giscus.html
@@ -23,7 +23,7 @@
       'data-theme': initTheme,
       'data-input-position': '{{ site.comments.giscus.input_position | default: 'bottom' }}',
       'data-lang': lang,
-      'data-loading': 'lazy',
+      'data-loading': 'eager',
       crossorigin: 'anonymous',
       async: ''
     };
