--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -454,6 +454,8 @@ main {
       background: none;
       margin: 2.5rem 0 1.25rem;
       padding: 0;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 0.5em;
     }
 
     h3 {
