chore: hide description

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,9 +17,11 @@ script_includes:
 <article class="px-1" data-toc="{{ enable_toc }}">
   <header>
     <h1 data-toc-skip>{{ page.title }}</h1>
+    {% comment %}
     {% if page.description %}
       <p class="post-desc fw-light mb-4">{{ page.description }}</p>
     {% endif %}
+    {% endcomment %}
 
     <div class="post-meta text-muted">
       <!-- published date -->
