--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -47,11 +47,13 @@
         padding: 1.75rem 1.75rem 1.25rem;
       }
 
-      .card-title {
+      h1.card-title {
         @extend %text-clip;
 
         color: var(--heading-color) !important;
-        font-size: 1.25rem;
+        font-size: 1.3rem !important;
+        line-height: 1.4 !important;
+        margin-bottom: 0.5rem !important;
       }
 
       %muted {
