--- a/_sass/pages/_archives.scss
+++ b/_sass/pages/_archives.scss
@@ -121,9 +121,13 @@
     margin-left: 2.5rem;
     position: relative;
     top: 0.1rem;
+    color: #333333 !important;
+    text-decoration: none !important;
 
     &:hover {
-      border-bottom: none;
+      color: #838B52 !important;
+      border-bottom: 1px solid #838B52 !important;
+      text-decoration: none !important;
     }
 
     &::before {
