style: chagne tabs font

--- a/_sass/pages/_archives.scss
+++ b/_sass/pages/_archives.scss
@@ -3,7 +3,7 @@
 
 /* Archives 페이지 인터페이스 폰트 적용 */
 #archives {
-  font-family: 'GowunDodum-Regular', sans-serif;
+  font-family: 'IBMPlexSansKR-Regular', sans-serif;
 }
 
 #archives {
@@ -112,7 +112,7 @@
 
     &.day {
       font-size: 85%;
-      font-family: 'GowunDodum-Regular', sans-serif;
+      font-family: 'IBMPlexSansKR-Regular', sans-serif;
     }
   }
 
