--- a/_sass/pages/_tags.scss
+++ b/_sass/pages/_tags.scss
@@ -20,7 +20,7 @@ a.tag {
   span {
     margin-left: 0.6em;
     font-size: 0.7em;
-    font-family: 'GowunDodum-Regular', sans-serif;
+    font-family: 'IBMPlexSansKR-Regular', sans-serif;
   }
 }
 
