style: change tabs link color

--- a/_sass/pages/_archives.scss
+++ b/_sass/pages/_archives.scss
@@ -121,7 +121,7 @@
     margin-left: 2.5rem;
     position: relative;
     top: 0.1rem;
-    color: #333333 !important;
+    color: #2E3339 !important;
     text-decoration: none !important;
 
     &:hover {
