--- a/_sass/pages/_categories.scss
+++ b/_sass/pages/_categories.scss
@@ -11,7 +11,7 @@
 
   /* Category link styling */
   a.mx-2 {
-    color: #242424 !important;
+    color: #2E3339 !important;
     text-decoration: none;
 
     &:hover {
