--- a/_sass/pages/_tags.scss
+++ b/_sass/pages/_tags.scss
@@ -14,7 +14,7 @@ a.tag {
   letter-spacing: 0;
   border: 1px solid var(--tag-border) !important;
   box-shadow: 0 0 3px 0 var(--tag-shadow);
-  color: #242424 !important;
+  color: #2E3339 !important;
   text-decoration: none !important;
 
   span {
