style: modify tags link

--- a/_sass/pages/_categories.scss
+++ b/_sass/pages/_categories.scss
@@ -13,6 +13,7 @@
   a.mx-2 {
     color: #2E3339 !important;
     text-decoration: none;
+    font-weight: normal !important;
 
     &:hover {
       color: #838B52 !important;
