--- a/_sass/pages/_archives.scss
+++ b/_sass/pages/_archives.scss
@@ -123,6 +123,7 @@
     top: 0.1rem;
     color: #2E3339 !important;
     text-decoration: none !important;
+    font-weight: normal !important;
 
     &:hover {
       color: #838B52 !important;
