style: change tags font size

--- a/_sass/pages/_tags.scss
+++ b/_sass/pages/_tags.scss
@@ -17,6 +17,7 @@ a.tag {
   color: #2E3339 !important;
   text-decoration: none !important;
   font-weight: normal !important;
+  font-size: 0.9rem;
 
   span {
     margin-left: 0.6em;
