--- a/_sass/pages/_category-tag.scss
+++ b/_sass/pages/_category-tag.scss
@@ -35,9 +35,15 @@
       @extend %no-bottom-border;
 
       font-size: 1.1rem;
-      color: #2E3339 !important;
       text-decoration: none !important;
       font-weight: normal !important;
+      
+      // 라이트 모드와 다크 모드 색상 지원
+      color: #2E3339 !important;
+      
+      [data-mode="dark"] & {
+        color: #e9ecef !important;
+      }
 
       &:hover {
         color: #838B52 !important;
