--- a/_sass/pages/_tags.scss
+++ b/_sass/pages/_tags.scss
@@ -12,7 +12,7 @@ a.tag {
   margin-right: 0.8rem;
   line-height: 3rem;
   letter-spacing: 0;
-  border: 1px solid var(--tag-border) !important;
+  border: 1px solid #6c757d !important;
   box-shadow: 0 0 3px 0 var(--tag-shadow);
   text-decoration: none !important;
   font-weight: normal !important;
