--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -134,6 +134,10 @@ main {
   margin-top: 2rem;
   overflow-wrap: break-word;
 
+  @include bp.lte(bp.get(sm)) {
+    font-size: 0.95rem;
+  }
+
   @include bp.xl {
     font-size: 1.03rem;
   }
