--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -122,6 +122,10 @@ h1 {
   color: var(--content-heading-color) !important;
   font-weight: normal !important;
   font-size: 2.0rem !important;
+  
+  @include bp.lte(bp.get(sm)) {
+    font-size: 1.7rem !important;
+  }
 }
 
 h2 {
@@ -129,6 +133,10 @@ h2 {
   color: var(--content-heading-color) !important;
   font-weight: normal !important;
   font-size: 1.7rem !important;
+  
+  @include bp.lte(bp.get(sm)) {
+    font-size: 1.4rem !important;
+  }
 }
 
 h3 {
@@ -420,6 +428,10 @@ main {
       background: none;
       margin: 2.5rem 0 1.5rem;
       padding: 0;
+      
+      @include bp.lte(bp.get(sm)) {
+        font-size: 1.7rem !important;
+      }
     }
 
     h2 {
@@ -433,6 +445,10 @@ main {
       padding-bottom: 0.5em;
       position: relative;
       text-align: left;
+      
+      @include bp.lte(bp.get(sm)) {
+        font-size: 1.4rem !important;
+      }
       
       &::before {
         content: '';
