--- a/_sass/themes/_dark.scss
+++ b/_sass/themes/_dark.scss
@@ -18,9 +18,10 @@
   
   /* Custom content colors for dark mode */
   --content-text-color: #E8E8E8;
-  --content-bold-color: #FF7A93;
-  --content-italic-color: #7AB8F0;
+  --content-bold-color: #E8E8E8;
+  --content-italic-color: #E8E8E8;
   --content-highlight-bg: #4A4A2A;
+  --content-highlight-font-weight: normal;
   --content-heading-color: #FFFFFF;
   --link-color: #838B52;
   --link-hover-color: #C97E49;
