--- a/_sass/themes/_light.scss
+++ b/_sass/themes/_light.scss
@@ -16,9 +16,11 @@
   
   /* Custom content colors for light mode */
   --content-text-color: #2E3338;
-  --content-bold-color: #D65063;
-  --content-italic-color: #468FCC;
+  --content-bold-color: #24282B;
+  --content-italic-color: #24282B;
   --content-highlight-bg: #FFF5CC;
+  --content-highlight-font-weight: bold;
+  --content-highlight-font-weight: bold;
   --content-heading-color: #242424;
   --link-color: #838B52;
   --link-hover-color: #C97E49;
